k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracktorr
  namespace: tracktorr
  labels:
    app: tracktorr
spec:
  type: ClusterIP
  ports:
    - port: 3030
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tracktorr
