k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracktorr
  namespace: tracktorr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: tracktorr.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracktorr
                port:
                  name: http
